@@ -8,8 +8,8 @@ import uk.gov.hmcts.reform.prl.models.dto.cafcass.CafCassResponse;
 import uk.gov.hmcts.reform.prl.models.dto.cafcass.Element;
 import uk.gov.hmcts.reform.prl.services.cafcass.PostcodeLookupService;
 
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -59,10 +59,9 @@ public class CafCassFilter {
      */
     public <T> List<Element<T>>  filterNonValueList(List<Element<T>> object) {
         if (object != null && !object.isEmpty()) {
-            return object.stream().filter(element -> element.getValue() != null).collect(
-                Collectors.toList());
+            return object.stream().filter(element -> element.getValue() != null).toList();
         }
 
-        return null;
+        return Collections.emptyList();
     }
 }
