@@ -17,7 +17,6 @@ import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.apache.commons.lang3.ObjectUtils.isNotEmpty;
 import static uk.gov.hmcts.reform.prl.enums.OrderTypeEnum.childArrangementsOrder;
@@ -63,7 +62,7 @@ public class CaseDataChildDetailsElementsMapper {
     private static List<Element<ChildDetailsRevised>> buildChildDetails(List<ChildDetail> childDetails) {
         return childDetails.stream()
             .map(CaseDataChildDetailsElementsMapper::mapToChildDetails)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private static Element<ChildDetailsRevised> mapToChildDetails(ChildDetail childDetail) {
