@@ -37,13 +37,13 @@ import java.time.Duration;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.ALL_PARTIES_ATTEND_HEARING_IN_THE_SAME_WAY;
@@ -201,9 +201,9 @@ public class HearingDataService {
             if (caseLinkedDataList.isPresent()) {
                 for (CaseLinkedData caseLinkedData : caseLinkedDataList.get()) {
                     Hearings hearingDetails = hearingService.getHearings(authorisation, caseLinkedData.getCaseReference());
-                    if (!ofNullable(hearingDetails).isEmpty() && !ofNullable(hearingDetails.getCaseHearings()).isEmpty()) {
+                    if (ofNullable(hearingDetails).isPresent() && ofNullable(hearingDetails.getCaseHearings()).isPresent()) {
                         List<CaseHearing> caseHearingsList = hearingDetails.getCaseHearings().stream()
-                            .filter(caseHearing -> LISTED.equalsIgnoreCase(caseHearing.getHmcStatus())).collect(Collectors.toList());
+                            .filter(caseHearing -> LISTED.equalsIgnoreCase(caseHearing.getHmcStatus())).toList();
                         if (ofNullable(caseHearingsList).isPresent()) {
                             dynamicListElements.add(DynamicListElement.builder().code(caseLinkedData.getCaseReference())
                                                         .label(caseLinkedData.getCaseName()).build());
@@ -380,7 +380,7 @@ public class HearingDataService {
             applicantList = caseData.getApplicants().stream()
                 .map(Element::getValue)
                 .map(PartyDetails::getLabelForDynamicList)
-                .collect(Collectors.toList());
+                .toList();
         }
 
         return applicantList;
@@ -394,7 +394,7 @@ public class HearingDataService {
             respondentList = caseData.getRespondents().stream()
                 .map(Element::getValue)
                 .map(PartyDetails::getLabelForDynamicList)
-                .collect(Collectors.toList());
+                .toList();
         }
         return respondentList;
 
@@ -407,24 +407,22 @@ public class HearingDataService {
             applicantSolicitorList = caseData.getApplicants().stream()
                 .map(Element::getValue)
                 .map(element -> element.getRepresentativeFirstName() + " " + element.getRepresentativeLastName())
-                .collect(Collectors.toList());
+                .toList();
         }
         return applicantSolicitorList;
 
     }
 
     private List<String> getRespondentSolicitorNameList(CaseData caseData) {
-        List<String> respondentSolicitorList = new ArrayList<>();
 
         if (caseData.getRespondents() != null) {
-            caseData.getRespondents().stream()
-                .map(Element::getValue)
-                .filter(partyDetails -> YesNoDontKnow.yes.equals(partyDetails.getDoTheyHaveLegalRepresentation()))
-                .map(element -> element.getRepresentativeFirstName() + " " + element.getRepresentativeLastName())
-                .collect(Collectors.toList());
+            return caseData.getRespondents().stream()
+                    .map(Element::getValue)
+                    .filter(partyDetails -> YesNoDontKnow.yes.equals(partyDetails.getDoTheyHaveLegalRepresentation()))
+                    .map(element -> element.getRepresentativeFirstName() + " " + element.getRepresentativeLastName())
+                    .toList();
         }
-
-        return respondentSolicitorList;
+        return Collections.emptyList();
 
     }
 
@@ -439,7 +437,7 @@ public class HearingDataService {
             if (caseLinkedDataList.isPresent()) {
                 return caseLinkedDataList.get().stream()
                     .map(cData -> DynamicListElement.builder()
-                        .code(cData.getCaseReference()).label(cData.getCaseReference()).build()).collect(Collectors.toList());
+                        .code(cData.getCaseReference()).label(cData.getCaseReference()).build()).toList();
             }
         } catch (Exception e) {
             log.error("Exception occured in getLinkedCasesDynamicList {}", e.getMessage());
