@@ -12,7 +12,6 @@ import uk.gov.hmcts.reform.prl.services.TaskErrorService;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.prl.enums.Event.OTHER_PROCEEDINGS;
@@ -46,7 +45,7 @@ public class OtherProceedingsChecker implements EventChecker {
             List<ProceedingDetails> allProceedings = proceedingDetails.get()
                 .stream()
                 .map(Element::getValue)
-                .collect(Collectors.toList());
+                .toList();
 
             //if a collection item is added and then removed the collection exists as length 0
             if (allProceedings.isEmpty()) {
